# speedy.js

./: .codeclimate.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  code-generator.cpp  code-generator.h  deploy.sh  index.ts  lerna.json  main.cpp  mergeSort.o.ll  package-lock.json  package.json  tslint.json
cases/: fib.ts
doc/: BUILD_LLVM_FROM_SOURCE.md  BUILD_TRAVIS_LLVM_PACKAGE.md  Enable WASM in Edge.md  benchmark-results.ipynb
scripts/: bootstrap.js
speedyjs-compiler/: LICENSE  index.ts  package.json
speedyjs-compiler/cases/: fib.ts
speedyjs-compiler/src/code-generation/: code-generation-context.ts  fallback-code-generator.ts  not-yet-implemented-code-generator.ts  per-file-code-generator.ts
speedyjs-compiler/src/transform/: speedyjs-transform-visitor.ts  transform-visitor.ts
speedyjs-runtime/: CMakeLists.txt  test.cc
speedyjs-runtime/emcc-output/: command-output
speedyjs-runtime/include/: runtime.h
speedyjs-runtime/lib/: array-api.cc  array-api.h  array.h  runtime.cpp
speedyjs-runtime/test/: CMakeLists.txt  array-tests.cc
src/code-generation/: code-generation-context-factory.ts  code-generator.ts  default-code-generation-context-factory.ts  default-code-generation-context.ts  per-file-code-generator.ts  scope.ts
src/code-generation/code-generators/: binary-expression-code-generator.ts  block-code-generator.ts  call-expression-code-generator.ts  expression-statement-code-generator.ts  false-keyword-code-generator.ts  first-binary-operator-code-generator.ts  (+8 more)
src/transform/: speedyjs-transform-visitor.ts
src/util/: diagnostics.ts
(+17 files in other folders)
